# curl

./: .azure-pipelines.yml  .cirrus.yml  .dir-locals.el  .gitattributes  .gitignore  .lgtm.yml  .mailmap  .travis.yml  CHANGES  CMakeLists.txt  MacOSX-Framework  Makefile.am  Makefile.dist  README  README.md  RELEASE-NOTES  SECURITY.md  acinclude.m4  appveyor.yml  buildconf.bat  carl-config.in  configure.ac  libcarl.pc.in  maketgz
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: fuzz.yml  macos.yml
CMake/: CMakeConfigurableFile.in  CurlSymbolHiding.cmake  CurlTests.c  FindBearSSL.cmake  FindBrotli.cmake  FindCARES.cmake  FindGSS.cmake  FindLibSSH2.cmake  FindMbedTLS.cmake  FindNGHTTP2.cmake  FindNGHTTP3.cmake  FindNGTCP2.cmake  FindNSS.cmake  FindQUICHE.cmake  FindWolfSSL.cmake  FindZstd.cmake  Macros.cmake  OtherTests.cmake  Utilities.cmake  carl-config.cmake.in  cmake_uninstall.cmake.in
docs/: .gitignore  ALTSVC.md  BINDINGS.md  BUG-BOUNTY.md  BUGS.md  CARL-DISABLE.md  CHECKSRC.md  CIPHERS.md  CMakeLists.txt  CODE_REVIEW.md  CODE_STYLE.md  CONTRIBUTE.md  DEPRECATE.md  DYNBUF.md  ECH.md  EXPERIMENTAL.md  FAQ  FEATURES.md  GOVERNANCE.md  HELP-US.md  HISTORY.md  HSTS.md  HTTP-COOKIES.md  HTTP2.md  HTTP3.md  HYPER.md  INSTALL.cmake  INSTALL.md  INTERNALS.md  KNOWN_BUGS  MAIL-ETIQUETTE  MANUAL.md  MQTT.md  Makefile.am  NEW-PROTOCOL.md  PARALLEL-TRANSFERS.md  README.md  RELEASE-PROCEDURE.md  ROADMAP.md  SECURITY-PROCESS.md  (+11 more)
docs/cmdline-opts/: CMakeLists.txt  MANPAGE.md  Makefile.am  Makefile.inc  alt-svc.d  anyauth.d  append.d  basic.d  cacert.d  capath.d  cert-status.d  cert-type.d  cert.d  ciphers.d  compressed.d  config.d  connect-timeout.d  continue-at.d  cookie-jar.d  cookie.d  create-dirs.d  create-file-mode.d  curves.d  data-urlencode.d  data.d  disable-eprt.d  disable-epsv.d  disable.d  disallow-username-in-url.d  dns-interface.d  dns-ipv4-addr.d  dns-ipv6-addr.d  dump-header.d  expect100-timeout.d  fail-early.d  fail.d  false-start.d  form.d  ftp-create-dirs.d  ftp-method.d  (+117 more)
docs/examples/: 10-at-a-time.c  Makefile.am  Makefile.example  Makefile.inc  Makefile.m32  Makefile.netware  README.md  adddocsref.pl  altsvc.c  anyauthput.c  cacertinmem.c  carlgtk.c  carlx.c  certinfo.c  chkspeed.c  cookie_interface.c  crawler.c  debug.c  ephiperfifo.c  evhiperfifo.c  externalsocket.c  fileupload.c  fopen.c  ftp-wildcard.c  ftpget.c  ftpgetinfo.c  ftpgetresp.c  ftpsget.c  ftpupload.c  ftpuploadfrommem.c  ftpuploadresume.c  getinfo.c  getinmemory.c  getredirect.c  ghiper.c  hiperfifo.c  href_extractor.c  htmltidy.c  htmltitle.cpp  http-post.c  (+85 more)
docs/libcarl/: .gitignore  ABI.md  CMakeLists.txt  Makefile.am  Makefile.inc  carl_easy_cleanup.3  carl_easy_duphandle.3  carl_easy_escape.3  (+85 more)
include/: Makefile.am  README.md
lib/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.inc  Makefile.m32  Makefile.netware  Makefile.vxworks  altsvc.c  altsvc.h  amigaos.c  amigaos.h  arpa_telnet.h  asyn-ares.c  asyn-thread.c  asyn.h  base64.c  c-hyper.c  c-hyper.h  carl_addrinfo.c  carl_addrinfo.h  carl_base64.h  carl_config.h.cmake  carl_ctype.c  carl_ctype.h  carl_des.c  carl_des.h  carl_endian.c  carl_endian.h  carl_fnmatch.c  carl_fnmatch.h  carl_get_line.c  carl_get_line.h  carl_gethostname.c  carl_gethostname.h  carl_gssapi.c  carl_gssapi.h  carl_hmac.h  carl_krb5.h  carl_ldap.h  carl_md4.h  (+229 more)
lib/vauth/: cleartext.c  cram.c  digest.c  digest.h  digest_sspi.c  krb5_gssapi.c  krb5_sspi.c  ntlm.c  ntlm.h  ntlm_sspi.c  oauth2.c  spnego_gssapi.c  spnego_sspi.c  vauth.c  vauth.h
lib/vquic/: ngtcp2.c  ngtcp2.h  quiche.c  quiche.h  vquic.c  vquic.h
lib/vssh/: libssh.c  libssh2.c  ssh.h  wolfssh.c  wolfssh.h
lib/vtls/: bearssl.c  bearssl.h  gskit.c  gskit.h  gtls.c  gtls.h  keylog.c  keylog.h  mbedtls.c  mbedtls.h  mbedtls_threadlock.c  mbedtls_threadlock.h  mesalink.c  mesalink.h  nss.c  nssg.h  openssl.c  openssl.h  schannel.c  schannel.h  schannel_verify.c  sectransp.c  sectransp.h  vtls.c  vtls.h  wolfssl.c  wolfssl.h
m4/: carl-compilers.m4  carl-confopts.m4  carl-functions.m4  carl-openssl.m4  carl-override.m4  carl-reentrant.m4
plan9/: README  mkfile  mkfile.proto
projects/: README  build-openssl.bat  build-wolfssl.bat  checksrc.bat  generate.bat  wolfssl_options.h
scripts/: Makefile.am  completion.pl  contributors.sh  contrithanks.sh  copyright.pl  coverage.sh  delta  installcheck.sh  log2changes.pl  release-notes.pl  singleuse.pl  updatemanpages.pl
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.inc  Makefile.m32  Makefile.netware  carl.rc  makefile.amiga  makefile.dj  mkhelp.pl  slist_wc.c  slist_wc.h  tool_binmode.c  tool_binmode.h  tool_bname.c  tool_bname.h  tool_cb_dbg.c  tool_cb_dbg.h  tool_cb_hdr.c  tool_cb_hdr.h  tool_cb_prg.c  tool_cb_prg.h  tool_cb_rea.c  tool_cb_rea.h  tool_cb_see.c  tool_cb_see.h  tool_cb_wrt.c  tool_cb_wrt.h  tool_cfgable.c  tool_cfgable.h  tool_convert.c  tool_convert.h  tool_dirhie.c  tool_dirhie.h  tool_doswin.c  tool_doswin.h  tool_easysrc.c  tool_easysrc.h  tool_filetime.c  tool_filetime.h  (+55 more)
src/macos/: MACINSTALL.TXT
src/macos/src/: macos_main.cpp
tests/: .gitignore  CMakeLists.txt  FILEFORMAT.md  Makefile.am  README.md  appveyor.pm  azure.pm  badsymbols.pl  convsrctest.pl  dictserver.py  directories.pm  disable-scan.pl  error-codes.pl  extern-scan.pl  ftp.pm  ftpserver.pl  getpart.pm  http2-server.pl  httpserver.pl  keywords.pl  manpage-scan.pl  manpage-syntax.pl  mem-include-scan.pl  memanalyze.pl  negtelnetserver.py  nroff-scan.pl  options-scan.pl  pathhelp.pm  rtspserver.pl  runtests.1  runtests.pl  secureserver.pl  serverhelp.pm  smbserver.py  sshhelp.pm  sshserver.pl  stunnel.pem  symbol-scan.pl  testcarl.1  testcarl.pl  (+5 more)
tests/server/: CMakeLists.txt  Makefile.am  Makefile.inc  base64.pl  disabled.c  fake_ntlm.c  getpart.c  getpart.h  mqttd.c  resolve.c  rtspd.c  server_setup.h  server_sockaddr.h  sockfilt.c  socksd.c  sws.c  testpart.c  tftp.h  tftpd.c  util.c  util.h
winbuild/: Makefile.vc  MakefileBuild.vc  README.md  gen_resp_file.bat  makedebug.cmd
(+1633 files in other folders)
